@@ -1,6 +1,3 @@
-- route statements which are defined in the middle of several link statements
-  are broken, because there is a realloc of config->links! Maybe there are
-  more bugs like this in the current sources
 - unify routes (make route, routeMail & routeFile "the same", so that routing
   depends on their order in the config), add NoPack (ignore mails to this
   address, leave them in the netmail area)
