@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Tue May 16 20:28:45 NOVST 2000
+max:
+* fix route parsing in the middle of the links
+
+----- cvs ci ------
 Mon May  8 17:40:14 NOVST 2000
 max (patch from Alex Bronin):
 * MS Visual C porting
